update program page and NGO logos

--- a/footer.html
+++ b/footer.html
@@ -118,6 +118,7 @@
             <h3>In co-operation with:</h3>
             <p>We love collaborating with non-profits - Get in touch to join forces with us!</p>
             <div class="logo-grid">
+
                   <a href="https://legaldesign-journal.com/" target="_blank"><img
                               src="images/collabs/Legal Design Journal.JPG" alt="Legal Design Journal"></a>
                   <a href="https://www.hiil.org/" target="_blank"><img
@@ -153,6 +154,8 @@
                               src="images/collabs/TalTech.png"></a>
                   <a href="https://taltech.ee/en/department-law" target="_blank"><img
                               src="images/collabs/lancaster-logo-2.PNG"></a>
+                  <a href="https://suffolklitlab.org/" target=" _blank"><img
+                              src="images/collabs/Suffolk University Law School Legal Tech Lab.png"></a>
 
                   <a href="https://www.utu.fi/en" target="_blank"><img src="images/collabs/UTU_logo_EN_RGB.png"></a>
 
@@ -172,6 +175,7 @@
                               src="images/collabs/Liquid Legal Institute .png"></a>
                   <a href="legaldesignsummit.com" target=" _blank"><img
                               src="images/collabs/Lebanese American University.jpg"></a>
+
                   <a href="legaldesignsummit.com" target=" _blank"><img
                               src="images/collabs/Gabne Gabnys Law Firm (Jovita Morta Gabne).png"></a>
                   <a href="legaldesignsummit.com" target=" _blank"><img
@@ -196,6 +200,14 @@
 
                   <a href="https://www.laurea.fi/en/" target=" _blank"><img
                               src="images/collabs/laurea-pystylogo_rgb.png"></a>
+
+                  <a href="https://legaldesignsummit.com" target="_blank">
+                        <img src="images/collabs/d-Van updated logo.png" alt="RTK" class="large-logo" />
+                  </a>
+                  <a href="https://legaldesignsummit.com" target="_blank">
+                        <img src="images/collabs/Legal-D(DorraHarrar)UPDATED.png" alt="Dorra Harrar"
+                              class="large-logo" />
+                  </a>
                   <a href="https://legaldesignsummit.com" target="_blank">
                         <img src="images/collabs/RTK logo (Peegi Kaibald).png" alt="RTK" class="large-logo" />
                   </a>
@@ -204,7 +216,9 @@
                         <img src="images/collabs/OliveHarbor Global Solutions.png" alt="Olive Harbor"
                               class="large-logo" />
                   </a>
-
+                  <a href="https://www.lawtoons.in/" target="_blank">
+                        <img src="images/collabs/Lawtoons.jpg" alt="Lawtoons" class="large-logo" />
+                  </a>
                   <a href="https://www.domstol.se/domstolsverket/other-languages/english/" target="_blank"><img
                               src="images/collabs/Domstolsverket.png"></a>
                   <a href="https://lawyersdesignschool.com/" target="_blank">
@@ -212,6 +226,9 @@
                               class="large-logo" />
                   </a>
 
+                  <a href="https://ddw.nl/en/locations/716/foundation-we-are" target="_blank">
+                        <img src="images/collabs/FoundationWeAre.png" alt="Foundation we are" class="large-logo" />
+                  </a>
                   <a href="https://www.domstol.se/helsingborgs-tingsratt/" target="_blank">
                         <img src="images/collabs/tr_Helsingborg_logo.png" alt="Helsingborg Court" class="large-logo" />
                   </a>
