--- a/index.html
+++ b/index.html
@@ -628,6 +628,8 @@
 			<a href="https://taltech.ee/en/department-law" target="_blank"><img src="images/collabs/TalTech.png"></a>
 			<a href="https://taltech.ee/en/department-law" target="_blank"><img
 					src="images/collabs/lancaster-logo-2.PNG"></a>
+			<a href="https://suffolklitlab.org/" target=" _blank"><img
+					src="images/collabs/Suffolk University Law School Legal Tech Lab.png"></a>
 
 			<a href="https://www.utu.fi/en" target="_blank"><img src="images/collabs/UTU_logo_EN_RGB.png"></a>
 
@@ -646,6 +648,7 @@
 			<a href="legaldesignsummit.com" target=" _blank"><img src="images/collabs/Liquid Legal Institute .png"></a>
 			<a href="legaldesignsummit.com" target=" _blank"><img
 					src="images/collabs/Lebanese American University.jpg"></a>
+
 			<a href="legaldesignsummit.com" target=" _blank"><img
 					src="images/collabs/Gabne Gabnys Law Firm (Jovita Morta Gabne).png"></a>
 			<a href="legaldesignsummit.com" target=" _blank"><img
@@ -667,6 +670,13 @@
 
 
 			<a href="https://www.laurea.fi/en/" target=" _blank"><img src="images/collabs/laurea-pystylogo_rgb.png"></a>
+
+			<a href="https://legaldesignsummit.com" target="_blank">
+				<img src="images/collabs/d-Van updated logo.png" alt="RTK" class="large-logo" />
+			</a>
+			<a href="https://legaldesignsummit.com" target="_blank">
+				<img src="images/collabs/Legal-D(DorraHarrar)UPDATED.png" alt="Dorra Harrar" class="large-logo" />
+			</a>
 			<a href="https://legaldesignsummit.com" target="_blank">
 				<img src="images/collabs/RTK logo (Peegi Kaibald).png" alt="RTK" class="large-logo" />
 			</a>
@@ -674,13 +684,18 @@
 			<a href="https://www.linkedin.com/in/olive-mumbo-72ba2059/" target="_blank">
 				<img src="images/collabs/OliveHarbor Global Solutions.png" alt="Olive Harbor" class="large-logo" />
 			</a>
-
+			<a href="https://www.lawtoons.in/" target="_blank">
+				<img src="images/collabs/Lawtoons.jpg" alt="Lawtoons" class="large-logo" />
+			</a>
 			<a href="https://www.domstol.se/domstolsverket/other-languages/english/" target="_blank"><img
 					src="images/collabs/Domstolsverket.png"></a>
 			<a href="https://lawyersdesignschool.com/" target="_blank">
 				<img src="images/collabs/lawyer_design_school.png" alt="Lawyers Design School" class="large-logo" />
 			</a>
 
+			<a href="https://ddw.nl/en/locations/716/foundation-we-are" target="_blank">
+				<img src="images/collabs/FoundationWeAre.png" alt="Foundation we are" class="large-logo" />
+			</a>
 			<a href="https://www.domstol.se/helsingborgs-tingsratt/" target="_blank">
 				<img src="images/collabs/tr_Helsingborg_logo.png" alt="Helsingborg Court" class="large-logo" />
 			</a>
