--- a/program.html
+++ b/program.html
@@ -603,7 +603,7 @@
 
   <!-- Main Content -->
   <div class="container">
-    <h1 class="main-title">🎯 Agenda</h1>
+    <h1 class="main-title">Program</h1>
     <p class="agenda-subtitle">
       Get ready to: <br><br>
       ✨ Be inspired by legal design leaders from all over the globe<br>
@@ -625,7 +625,7 @@
 
       <div class="session-row">
         <div class="session-header" onclick="toggleSession(this)">
-          <div class="time-slot">08:30-09:30</div>
+          <div class="time-slot">08:30–09:30</div>
 
           <div class="session-content">
             <div class="session-title">Registration</div>
@@ -677,11 +677,11 @@
         </div>
       </div>
       <div class="session-divider">
-        Design Thinking in Government and Law-making
+        🏛️ Design Thinking in Government and Law-making
       </div>
       <div class="session-row">
         <div class="session-header" onclick="toggleSession(this)">
-          <div class="time-slot">11:15-11:35</div>
+          <div class="time-slot">11:15–11:35</div>
 
           <div class="session-content">
             <div class="session-title">Law Drafting Meets Legal Design
@@ -692,7 +692,7 @@
 
         <div class="session-row">
           <div class="session-header" onclick="toggleSession(this)">
-            <div class="time-slot">11:40-12:00</div>
+            <div class="time-slot">11:40–12:00</div>
 
             <div class="session-content">
               <div class="session-title">Title coming soon...
@@ -703,7 +703,7 @@
         </div>
         <div class="session-row">
           <div class="session-header" onclick="toggleSession(this)">
-            <div class="time-slot">12:05-12:35</div>
+            <div class="time-slot">12:05–12:35</div>
 
             <div class="session-content">
               <div class="session-title">Fireside chat: Driving Systemic Change – A Regional Perspective
@@ -714,17 +714,17 @@
           </div>
         </div>
         <div class="lunch-divider session-divider">
-          Full brain, hungry stomach - time for lunch! (Self-paid at local venues)
+          Full brain, hungry stomach – time for lunch! (Self-paid at local venues)
         </div>
       </div>
 
       <div class="session-divider">
-        Afternoon Sessions: The Power and Value of Design in Law
+        ⚡ The Power and Value of Design in Law
       </div>
 
       <div class="session-row">
         <div class="session-header" onclick="toggleSession(this)">
-          <div class="time-slot">13:40-14:00</div>
+          <div class="time-slot">13:40–14:00</div>
           <div class="session-content">
             <div class="session-title">Legal Design as Sensemaking
             </div>
@@ -735,7 +735,7 @@
 
       <div class="session-row">
         <div class="session-header" onclick="toggleSession(this)">
-          <div class="time-slot">14:05-14:25</div>
+          <div class="time-slot">14:05–14:25</div>
 
           <div class="session-content">
             <div class="session-title">How to Stop Dumb Design Confusing Smart People
@@ -746,7 +746,7 @@
       </div>
       <div class="session-row">
         <div class="session-header" onclick="toggleSession(this)">
-          <div class="time-slot">14:30-15:00</div>
+          <div class="time-slot">14:30–15:00</div>
           <div class="session-content">
             <div class="session-title">Fireside chat: Opening up Possibilities for Legal Design
             </div>
@@ -757,11 +757,11 @@
         </div>
       </div>
       <div class="break-divider session-divider">
-        15:00-15:45 Caffeine needed: Time to recharge and network
+        15:00–15:45 Caffeine needed: Time to recharge and network
       </div>
       <div class="session-row">
         <div class="session-header" onclick="toggleSession(this)">
-          <div class="time-slot">15:50-16:10</div>
+          <div class="time-slot">15:50–16:10</div>
           <div class="session-content">
             <div class="session-title">A Life-Changing Merger: When My Passion for Design Met the Practice of Law
             </div>
@@ -771,18 +771,18 @@
       </div>
       <div class="session-row">
         <div class="session-header" onclick="toggleSession(this)">
-          <div class="time-slot">16:15-16:35</div>
+          <div class="time-slot">16:15–16:35</div>
           <div class="session-content">
             <div class="session-title">Fireside chat: The ROI of Legal Design
             </div>
-            <div class="session-speaker"><strong>Christine Inkinen,Hannele Korhonen & Piia Madissoo</strong></div>
+            <div class="session-speaker"><strong>Christine Inkinen, Hannele Korhonen & Piia Madissoo</strong></div>
           </div>
         </div>
       </div>
 
       <div class="session-row keynote-session">
         <div class="session-header" onclick="toggleSession(this)">
-          <div class="time-slot">16:40-17:00</div>
+          <div class="time-slot">16:40–17:00</div>
           <div class="session-content">
             <div class="session-title">Closing keynote: Merging Law and Design
             </div>
@@ -793,12 +793,15 @@
 
       <div class="party-section">
         <div class="party-header">
-          🎉 Afterpartyyy! 🎉
+          Unwind and Connect at the Afterparty 🎉
         </div>
         <div class="party-content">
           <span class="party-emoji">🥳🍾🎵</span>
-          <div>The night is young and so are we!</div>
-          <div><strong>Details dropping soon... Stay tuned!</strong></div>
+          <div>As our program concludes for the day, it is the time for the Afterparty!
+            This is the perfect opportunity
+            to relax, connect with fellow attendees, and extend valuable discussions in a more informal and vibrant
+            setting. Keep an eye out for upcoming details and separate registration for this special evening! </div>
+
           <span class="party-emoji">🌟✨🎊</span>
         </div>
       </div>
@@ -829,7 +832,7 @@
         </div>
         <div class="session-row keynote-session">
           <div class="session-header" onclick="toggleSession(this)">
-            <div class="time-slot">09:35-9:55</div>
+            <div class="time-slot">09:35–9:55</div>
             <div class="session-content">
               <div class="session-title">Opening keynote:
                 Dear Business: You Can’t Spell Sustainability Without Human Rights and Legal Design
@@ -840,9 +843,9 @@
         </div>
         <div class="session-row">
           <div class="session-header" onclick="toggleSession(this)">
-            <div class="time-slot">10:00-10:20</div>
+            <div class="time-slot">10:00–10:20</div>
             <div class="session-content">
-              <div class="session-title"> Can Contracts Save the World?
+              <div class="session-title">Can Contracts Save the World?
               </div>
               <div class="session-speaker"><strong>Anne Ketola & Anna Hurmerinta-Haanpää</strong></div>
             </div>
@@ -851,9 +854,9 @@
 
         <div class="session-row">
           <div class="session-header" onclick="toggleSession(this)">
-            <div class="time-slot">10:25-10:45</div>
+            <div class="time-slot">10:25–10:45</div>
             <div class="session-content">
-              <div class="session-title"> What if Birds Could Tell Us What is Right? A Curious Visit to the World
+              <div class="session-title">What if Birds Could Tell Us What is Right? A Curious Visit to the World
                 of Designing with the More-than-human
               </div>
               <div class="session-speaker"><strong>Nina Toivonen</strong></div>
@@ -862,12 +865,12 @@
         </div>
 
         <div class="session-divider">
-          Designing Access to Justice
+          ⚖️ Designing Access to Justice
         </div>
 
         <div class="session-row">
           <div class="session-header" onclick="toggleSession(this)">
-            <div class="time-slot">10:50-11:10</div>
+            <div class="time-slot">10:50–11:10</div>
             <div class="session-content">
               <div class="session-title">Artificial Intelligence for Open Justice: Conscious, Community-driven
                 Solutions
@@ -879,10 +882,10 @@
 
         <div class="session-row">
           <div class="session-header" onclick="toggleSession(this)">
-            <div class="time-slot">11:15-11:35</div>
+            <div class="time-slot">11:15–11:35</div>
 
             <div class="session-content">
-              <div class="session-title"> Beyond Brochures : Legal Design as a Powerful Driver for Systemic
+              <div class="session-title">Beyond Brochures : Legal Design as a Powerful Driver for Systemic
                 Justice Reform in Tunisia
               </div>
               <div class="session-speaker"><strong>Dorra Harrar</strong></div>
@@ -891,15 +894,15 @@
         </div>
 
         <div class="lunch-divider session-divider">
-          11:35-13:00 Creativity and innovation requires carbs - it’s lunch time!
+          11:35–13:00 Creativity and innovation requires carbs – it’s lunch time!
           Lunch is not provided at the venue and is self-paid
         </div>
 
         <div class="session-row">
           <div class="session-header" onclick="toggleSession(this)">
-            <div class="time-slot">13:05-13:35</div>
+            <div class="time-slot">13:05–13:35</div>
             <div class="session-content">
-              <div class="session-title"> Fireside chat: Announcement coming soon…
+              <div class="session-title">Fireside chat: Announcement coming soon…
               </div>
               <div class="session-speaker"><strong>Coming soon...</strong>
               </div>
@@ -909,10 +912,10 @@
 
         <div class="session-row">
           <div class="session-header" onclick="toggleSession(this)">
-            <div class="time-slot">13:35-14:00</div>
+            <div class="time-slot">13:35–14:00</div>
 
             <div class="session-content">
-              <div class="session-title"> Unlocking Clarity: UX Research Insights from Real Legal Experiences
+              <div class="session-title">Unlocking Clarity: UX Research Insights from Real Legal Experiences
               </div>
               <div class="session-speaker"><strong>Natalia Grant</strong>
               </div>
@@ -921,10 +924,10 @@
         </div>
         <div class="session-row">
           <div class="session-header" onclick="toggleSession(this)">
-            <div class="time-slot">14:00-14:20</div>
+            <div class="time-slot">14:00–14:20</div>
 
             <div class="session-content">
-              <div class="session-title"> Legal Service Design: A Tool for Rethinking Reproduction
+              <div class="session-title">Legal Service Design: A Tool for Rethinking Reproduction
               </div>
               <div class="session-speaker"><strong>Angelica Flechas</strong>
               </div>
@@ -932,18 +935,18 @@
           </div>
         </div>
         <div class="break-divider session-divider">
-          14:20-15:15 - Coffee break: Refill your cup and make new connections.
+          14:20–15:15 – Coffee break: Refill your cup and make new connections.
         </div>
 
         <div class="session-divider">
-          Challenging Tradition through Innovation
+          🚀 Challenging Tradition through Innovation
         </div>
 
         <div class="session-row">
           <div class="session-header" onclick="toggleSession(this)">
-            <div class="time-slot">15:20-15:50</div>
+            <div class="time-slot">15:20–15:50</div>
             <div class="session-content">
-              <div class="session-title"> Fireside chat:
+              <div class="session-title">Fireside chat:
                 From Primary School to University: How Legal Design can Redesign Legal Literacy and
                 Education
               </div>
@@ -956,9 +959,9 @@
 
         <div class="session-row">
           <div class="session-header" onclick="toggleSession(this)">
-            <div class="time-slot">15:55-16:15</div>
+            <div class="time-slot">15:55–16:15</div>
             <div class="session-content">
-              <div class="session-title"> Mission Impossible: Designing the Mindset of Public Officials
+              <div class="session-title">Mission Impossible: Designing the Mindset of Public Officials
               </div>
               <div class="session-speaker"><strong>Peegi Kaibald & Outi Nokkonen</strong>
               </div>
@@ -967,9 +970,9 @@
         </div>
         <div class="session-row keynote-session">
           <div class="session-header" onclick="toggleSession(this)">
-            <div class="time-slot">16:20-16:40</div>
+            <div class="time-slot">16:20–16:40</div>
             <div class="session-content">
-              <div class="session-title"> Closing keynote: Shaping the Future of Law – 5 Myths We Must
+              <div class="session-title">Closing keynote: Shaping the Future of Law – 5 Myths We Must
                 Leave Behind
               </div>
               <div class="session-speaker"><strong>Astrid Kohlmeier & Lina Keßler</strong>
@@ -982,7 +985,7 @@
           <div class="session-header" onclick="toggleSession(this)">
             <div class="time-slot">16:45</div>
             <div class="session-content">
-              <div class="session-title"> Final reflections
+              <div class="session-title">Final reflections
               </div>
             </div>
           </div>
@@ -990,14 +993,14 @@
 
         <div class="party-section">
           <div class="party-header">
-            🎊 Grand Finale Celebration! 🎊
+            🎊 Summit Closing – Let's Celebrate 🎊
           </div>
           <div class="party-content">
-            <span class="party-emoji">🎪🎭🎨</span>
-            <div>Thank you for an amazing 2025 Summit!</div>
-            <div><strong>Time to celebrate our achievements together!</strong></div>
-            <div style="margin-top: 15px; font-size: 16px;">Exciting details coming soon! 🚀</div>
-            <span class="party-emoji">🌈✨🎯</span>
+            <span class="party-emoji">🌟✨🎊</span>
+
+            <div><strong>Thank you for an amazing Legal Design Summit 2025! </strong></div>
+            <div style="margin-top: 15px; font-size: 16px;">Details coming soon! 🚀</div>
+            <span class="party-emoji">🌟✨🎊</span>
           </div>
         </div>
       </div>
