update speakers page and bios

--- a/program.html
+++ b/program.html
@@ -935,7 +935,7 @@
           </div>
         </div>
         <div class="break-divider session-divider">
-          14:20–15:15 – Coffee break: Refill your cup and make new connections.
+          14:20–15:15 – Coffee break: Refill your cup and make new connections
         </div>
 
         <div class="session-divider">
