--- a/program.html
+++ b/program.html
@@ -695,7 +695,7 @@
             <div class="time-slot">11:40–12:00</div>
 
             <div class="session-content">
-              <div class="session-title">Title coming soon...
+              <div class="session-title">Lawmaker as Designer
               </div>
               <div class="session-speaker"><strong>Jenni Hakkarainen</strong></div>
             </div>
