--- a/about-us.html
+++ b/about-us.html
@@ -58,8 +58,8 @@
               <div class="menu-container">
                 <ul class="menu">
                   <li class=" first"><a href="index.html">Home</a></li>
-                  <li class=" first"><a href="brainfactory.html">Brainfactory workshops</a></li>
-                  <li class=""><a href="program-friday.html">Program Loading...</a></li>
+                  <li class=" first"><a href="brainfactory.html">Brainfactory</a></li>
+                  <li class=""><a href="program.html">Program</a></li>
                   <li class=""><a href="about-us.html">Meet the team</a></li>
                   <li class=""><a href="tickets.html">Tickets</a></li>
                   <li class=" last"><a href="why-attend.html">History</a></li>
