--- a/brainfactory.html
+++ b/brainfactory.html
@@ -417,7 +417,7 @@
                 <ul class="menu">
                   <li class=" first"><a href="index.html">Home</a></li>
                   <li class=" first"><a href="brainfactory.html">Brainfactory workshops</a></li>
-                  <li class=""><a href="program-thursday.html">Program Loading...</a></li>
+                  <li class=""><a href="program.html">Program</a></li>
                   <li class=""><a href="about-us.html">Meet the team</a></li>
                   <li class=""><a href="tickets.html">Tickets</a></li>
                   <li class=" last"><a href="why-attend.html">History</a></li>
