--- a/index.html
+++ b/index.html
@@ -525,8 +525,12 @@
 				</div>
 			</div>
 		</div>
+		<div class="notification-section">
+			<a href="https://legaldesignsummit.com/program.html" target="_blank" class="notify-btn">
+				Program out Now!
+			</a>
+		</div>
 	</section>
-
 	<!-- ─── Sponsor block ───────────────────────────────────────── -->
 	<section class="sponsors" id="sponsors">
 		<h3>The Legal Design Summit is made possible by:</h3>
