speaker page updates with photos

--- a/speakers-thursday.html
+++ b/speakers-thursday.html
@@ -63,9 +63,10 @@
     .main-title {
       font-size: 3rem;
       font-weight: bold;
-      color: #333;
+      color: #000;
       margin-bottom: 10px;
       font-family: 'Oswald', 'Helvetica Neue';
+      padding: 40px 20px;
     }
 
     .subtitle {
@@ -448,7 +449,7 @@
   <div class="container">
     <header class="header">
       <h1 class="main-title">Meet this year's Speakers</h1>
-      <p class="subtitle">Shaping the next chapter in legal design</p>
+      <p class="subtitle">✨Shaping the next chapter in Legal Design✨</p>
     </header>
 
     <div class="speakers-container" id="speakers-container">
@@ -464,7 +465,7 @@
         name: "Antti Innanen",
         position: "CEO of Dot., Co-founder of Legal Design Summit",
 
-        image: "images/speakers/2025/Antti_Innanen.jpg",
+        image: "images/speakers/2025/Antti Innanen_crop.jpg",
         linkedin: "https://www.linkedin.com/in/anttiinnanen/",
 
         bio: "Antti is the CEO of Dot. and co-founder of the Legal Design Summit. A true Legal Design OG, he is one of the most widely recognized voices in the field and has played a key role in shaping the global movement toward more human-centered law. Lately, Antti has been exploring the frontiers of AI and agentic systems. His upcoming book, Prompted: How to Create and Communicate with AI, will be published by Routledge in 2025. For the first time since 2016, Antti is back on the Summit stage, and this time with a bang.",
@@ -552,7 +553,7 @@
         section: "Design Thinking in Government and Law-making",
         name: "Mirza Chiragov",
         position: "Academic Director at the Digital Law Lab Azerbaijan, CEO of Dejured, ELTA Ambassador in Azerbaijan",
-        image: "images/speakers/2025/Mirza Chiragov.jpeg",
+        image: "images/speakers/2025/Mirza Chiragov_crop.jpeg",
         linkedin: "#",
         bio: "Mirza has extensive experience in corporate law, bankruptcy, and litigation. Having witnessed firsthand the internal complexities and barriers within the legal profession, he realized that law must be dynamic, adaptable, and accessible. Driven by this vision, Mirza actively promotes the concept of 'plan law' (clear and understandable law) across Azerbaijan, Uzbekistan, Kazakhstan, and beyond. As Academic Director of the Digital Law Lab, he leads research projects, hosts podcasts, and frequently delivers public lectures. Mirza is also building a platform in Azerbaijan to provide ordinary citizens with user-friendly legal documents, applying Legal Design principles. He holds two LL.M. degrees, is currently pursuing his PhD, and teaches law courses at several universities. Additionally, Mirza was honored as the Lifetime Contribution to Innovation Winner at the 2025 European Legal Innovation & Technology Awards.",
         sessions: [
@@ -564,7 +565,7 @@
         name: "Sophie Ranaivoharisoa",
         position: "PhD Candidate in Law, University of Antananarivo",
 
-        image: "images/speakers/2025/Sophie Ranaivoharisoa_photo.jpg",
+        image: "images/speakers/2025/Sophie Ranaivoharisoa_crop.jpg",
         linkedin: "https://www.linkedin.com/in/sophiernh/",
         bio: "Sophie is a PhD candidate in Law, holding a master’s in business law from the University of Antananarivo. Her doctoral research focuses on the protection of consumer data privacy in Madagascar through Corporate Digital Responsibility, proposing Legal Design as a practical approach to address this challenge. With the accelerated growth of digital technology, she is committed to inclusive legal innovation, aiming to improve access to legal information in Madagascar by accounting for systemic and cultural realities. As a Mandela Washington Fellow under the Young African Leaders Initiative, she advocates for the integration of Southern perspectives in global legal conversations.",
         sessions: [
@@ -588,7 +589,7 @@
         name: "Dr. Naji Shah",
         position: "",
 
-        image: "images/speakers/2025/Naji Shah Mohammadi.jpeg",
+        image: "images/speakers/2025/Naji Shah Mohammadi_crop.jpeg",
         linkedin: "#",
         bio: "Naji is a legal scholar and strategist working at the intersection of law and business. His work explores how legal thinking can drive alignment, clarity, and strategic value. Drawing on principles of proactive law, legal design, and systems thinking, he focuses on transforming legal tools into frameworks that support collaboration, decision-making, and long-term impact. His approach integrates legal insight with business strategy to address complex challenges, foster innovation, and create value. Naji is committed to advancing legal thinking that is adaptive, intelligent, and deeply connected to the evolving needs of organizations and society.",
         sessions: [
@@ -600,7 +601,7 @@
         name: "Peter Hornsby",
         position: "Designer",
 
-        image: "images/speakers/2025/Peter Hornsby.jpg",
+        image: "images/speakers/2025/Peter Hornsby_crop.jpg",
         linkedin: "https://www.linkedin.com/in/drpeterhornsby/",
         bio: "Peter originally studied human factors, learning about the science behind design, then did a computer science PhD in low-code programming. He has worked in UX since 2001, tackling complex design problems in defence, telecoms, and fintech. Since 2020 he has used research, design, and testing to improve legal documents for organisations ranging from startups to multinationals, and helped legal tech companies create better experiences. ",
         sessions: [
@@ -613,7 +614,7 @@
         name: "Dr. Ade Mabogunje",
         position: "",
 
-        image: "images/speakers/2025/Ade_Mabogunje.jpg",
+        image: "images/speakers/2025/Ade Mabogunje_crop.jpg",
         linkedin: "https://www.linkedin.com/in/ade-mabogunje-579a2/",
         bio: "Ade is a scientist at Stanford University, where he explores the intersection of designing, learning, engineering, innovation, and capital formation. He has done field research studies on innovation ecosystems in California, Nigeria, and India. Before that, he was associate director of Stanford’s Center for Design Research (CDR), and lead of the Real-time Venture Design Lab (ReVeL). His industry experience includes engineering positions at the oil company Elf (now Total) in Nigeria, and research collaboration with Artificial Intelligence Scientists at NASA Ames. He has published papers on design theory and methodology, knowledge management, emotions in engineering, design protocol analysis, and engineering-design education.",
         sessions: [
@@ -661,7 +662,7 @@
         name: "Jovita Morta Gabne",
         position: "Attorney-at-law, Managing Partner",
 
-        image: "images/speakers/2025/Jovita Morta Gabne.jpg",
+        image: "images/speakers/2025/Jovita Morta Gabne_crop.jpg",
         linkedin: "#",
         bio: "Jovita is a Managing Partner, Attorney-at-law at Gabné.Gabnys Entertainment, Dispute Resolution and Tech Law Boutique. She has 20 years of practice, including 11 years at Ellex (Top tier Baltic Law Firm) where she led the litigation and investigations team. She successfully represents clients in commercial, intellectual property, professional liability, and corporate disputes. Jovita has extensive experience handling complex, high-value cases that have garnered media attention and shaped judicial practice. Jovita is a charismatic expert in dispute resolution and intellectual property, a pioneer of fashion law in Lithuania, and an advocate for creative industries.",
         sessions: [
@@ -673,7 +674,7 @@
         name: "Christine Inkinen",
         position: "Legal Counsel, Neste",
 
-        image: "images/speakers/2025/Christine_Inkinen.jpg",
+        image: "images/speakers/2025/Christine Inkinen_crop.jpg",
         linkedin: "https://www.linkedin.com/in/christine-inkinen/",
         bio: "Christine is a legal counsel at Neste, a major chemical manufacturing company, and a former partner at Dot. Legal Design Agency. As a one-time-consultant turned in-house counsel, Christine has a unique perspective on demand and implementation of legal design in a large corporation. Her legal design journey dates back to 2017, when she first volunteered at Legal Design Summit and became an immediate advocate.",
         sessions: [
@@ -711,7 +712,7 @@
         name: "Karma Dabaghi",
         position: "Assistant Professor",
 
-        image: "images/speakers/2025/Karma Dabaghi.jpg",
+        image: "images/speakers/2025/Karma Dabaghi_crop.jpg",
         linkedin: "https://www.linkedin.com/in/karmadabaghi/",
         bio: "Karma is an architect, product designer, and university professor whose work blends societal critique with innovative design. Her research explores two primary areas: the role of technological advancements in design education, and the intersection of political activism, legal design, and dissensual practices in urban environments. Within the field of Legal Design, she investigates how architects and graphic designers can use design methodologies to represent facts, create evidence, and foster accountability, with a focus on preventing future disasters and enhancing societal justice.",
         sessions: [
@@ -735,7 +736,7 @@
         name: "Anne Ketola",
         position: " PhD, Senior Researcher",
 
-        image: "images/speakers/2025/Anne_Ketola.jpg",
+        image: "images/speakers/2025/Anne Ketola_crop.jpg",
         linkedin: "https://www.linkedin.com/in/anne-ketola-02629a2b6/",
         bio: "Anne is a linguist who specializes in cognitive accessibility and plain language. Her recent research has focused on the accessibility of contract language and design methods that support the comprehension of contracts. Ketola is the Principal Investigator in the Contract Language research project, conducted by the JARGONFREE research group at Tampere University, Finland. The project examines how complex and vague language used in supply chain contracts obscures the contract parties’ sustainability commitments.",
         sessions: [
@@ -772,7 +773,7 @@
         name: "Laura Márquez Martínez",
         position: "Justice Innovator",
 
-        image: "images/speakers/2025/Laura Marquez.jpeg",
+        image: "images/speakers/2025/Laura Marquez_crop.jpeg",
         linkedin: "#",
         bio: "Laura is Director and co-founder of ÏO Justice. After 13 years of judicial experience across Latin America, Europe, and the US, she has advised on legal technology for 7 years, focusing on access to justice through digital solutions. She holds an LL.M. from NYU, and Master's in Human Rights from ITAM, and in Legal Argumentation from the University of Alicante; she serves as a fellow of UNAM's LIDIA Artificial Intelligence Research Group and as co-leader at the Center for Innovation and Access to Justice. She led the development of IALucIA—an AI legal assistant advancing Ibero American open justice ecosystem.",
         sessions: [
@@ -858,7 +859,7 @@
         name: "Tiago Guerreiro",
         position: "",
 
-        image: "images/speakers/2025/Tiago Guerreiro_PLMJ_445A9961.jpg",
+        image: "images/speakers/2025/Tiago Guerreiro_crop.jpg",
         linkedin: "https://www.linkedin.com/in/tflguerreiro/",
         bio: "A few years ago, Tiago boldly wrote on a résumé: “designer of legal solutions.” It sounded odd, but he was a litigation lawyer who had just launched a design company – so why not? Law in Portugal was still black-and-white, and design wasn’t even on its radar. Then Tiago came across legal design, and everything clicked. Now, he tries to add that pinch of salt to law, making the legal system better for its users – everyone. Off the clock, Tiago is just a guy who enjoys life’s simple pleasures and doesn’t take it too seriously.",
         sessions: [
@@ -894,7 +895,7 @@
         name: "Astrid Kohlmeier",
         position: "Founder of AK LEGAL DESIGN (Let's Do Legal Design), co-founder of the Liquid Legal Institute and co-author of The Legal Design Book",
 
-        image: "images/speakers/2025/Astrid_Kohlmeier.jpg",
+        image: "images/speakers/2025/Astrid Kohlmeier_crop.jpg",
         linkedin: "https://www.linkedin.com/in/astridkohlmeier/",
         bio: "Based near Munich, Astrid is a lawyer, designer and pioneer of the Legal Design innovation method. She advises legal departments, law firms in addition to justice and legislative institutions, helping them to develop user-centred solutions. Her work focuses on innovation, digital transformation, and the fair and ethical embedding of AI in legal systems. Astrid is a member and lecturer of the Executive Faculty of the Bucerius Center on the Legal Profession, co-founder of the Liquid Legal Institute, member of the editorial team of the Legal Design Journal and keynote speaker at conferences worldwide.",
         sessions: [
@@ -910,7 +911,7 @@
         linkedin: "https://www.linkedin.com/in/linakrawietz/",
         bio: "Lina is a co-founder of TiLD, a leading innovation consultancy reshaping the legal sector through a design-driven, human-centered approach. She is also a Member of the Management Board at the Liquid Legal Institute e.V., a global non-profit think tank advancing collaboration and innovation in the legal ecosystem. With a distinctive background at the intersection of law, design, and innovation consulting, Lina is a pioneer in legal design and a passionate advocate for systemic change in the legal profession. Her work empowers legal departments, law firms, and institutions to embrace meaningful (digital) transformation – prioritizing usability, strategic clarity, and client-centricity. A frequent speaker, facilitator, and thought leader, Lina inspires legal professionals to reimagine how legal services are designed, delivered, and experienced. In recognition of her impact, she received the European Women of Legal Tech Award 2020.",
         sessions: [
-          { day: "DAY 2 - Friday", title: "TBC" }
+          { day: "DAY 2 - Friday", title: "Closing keynote: Shaping the Future of Law – 5 Myths We Must Leave Behind" }
         ]
       },
     ];
