update Angelicas photo

--- a/speakers-thursday.html
+++ b/speakers-thursday.html
@@ -806,10 +806,10 @@
       },
       {
         section: "Designing Access to Justice",
-        name: "Angelica Flechas",
+        name: "Angélica Flechas",
         position: "CEO and founder at Háptica",
 
-        image: "images/speakers/2025/Angélica_Flechas.jpeg",
+        image: "images/speakers/2025/Angelica_Flechas.jpeg",
         linkedin: "https://www.linkedin.com/in/angélica-flechas-0867532b/",
         bio: "Angélica is a lawyer with a minor in Commercial Law, a designer from Universidad de los Andes, and holds an MBA from Hult Business School in Boston. She is also the founder and general manager of Háptica, the first consulting firm in Colombia dedicated to designing services and implementing Legal Service Design methodologies. Through this work, she has collaborated with banks, insurance companies, and consumer and technology companies in Chile, Colombia, Mexico, Peru, and Ecuador. Thanks to her methodological perspective, she has been a speaker at the Service Design Network Global Conference in Toronto and the Legal Design Summit in Helsinki",
         sessions: [
