update Annas photo

--- a/speakers-thursday.html
+++ b/speakers-thursday.html
@@ -749,7 +749,7 @@
         name: "Anna Hurmerinta-Haanpää",
         position: "LL.D., University Lecturer",
 
-        image: "images/speakers/2025/Anna_Hurmerinta_Haanpää.jpg",
+        image: "images/speakers/2025/Anna Hurmerinta-Haanpää_crop.jpg",
         linkedin: "https://www.linkedin.com/in/annahurmerinta/",
         bio: "Anna is a university lecturer at Aalto University Business School. She teaches a range of subjects to prospective business leaders, including corporate sustainability, sustainable contracting, proactive contracting, and contract design. Her current research interests include corporate sustainability regulation, sustainable contracting practices, and contract language. She has a strong preference for working in multiprofessional and multidisciplinary teams. In addition to her teaching and research activities, Hurmerinta-Haanpää serves as the Editor-in-Chief of the Finnish academic journal, Oikeus, and provides training on her areas of expertise to a range of organizations and professionals.",
         sessions: [
