update Speaker bios

--- a/program.html
+++ b/program.html
@@ -902,7 +902,8 @@
           <div class="session-header" onclick="toggleSession(this)">
             <div class="time-slot">13:05–13:35</div>
             <div class="session-content">
-              <div class="session-title">Fireside chat: Announcement coming soon…
+              <div class="session-title">Fireside chat: Designing with, not for: Revisioning Justice as Trauma-Informed
+                and Person-Centered
               </div>
               <div class="session-speaker"><strong>Coming soon...</strong>
               </div>
