--- a/speakers-thursday.html
+++ b/speakers-thursday.html
@@ -507,7 +507,7 @@
 
         image: "images/speakers/2025/Christian_Djeffal.jpg",
         linkedin: "#",
-        bio: "Christian is a Tenured Professor for Law, Science, and Technology at the Technical University of Munich (TUM) and a certified design thinking coach. His overarching research explores societal stability and change, with a focus on the ability to steer these dynamics. To study this in practice, Christian examines the interplay between law and technology, particularly in relation to emerging fields like artificial intelligence and the Internet of Things. He champions integrative and transdisciplinary legal approaches and founded the Constitutional Design Lab, which emphasizes normative participatory design, designerly knowledge creation, and creative methods to address complexity.",
+        bio: "Christian is a Tenured Professor for Professor for Law, Innovation and Legal Design at the Technical University of Munich (TUM) and a certified design thinking coach. His overarching research explores societal stability and change, with a focus on the ability to steer these dynamics. To study this in practice, Christian examines the interplay between law and technology, particularly in relation to emerging fields like artificial intelligence and the Internet of Things. He champions integrative and transdisciplinary legal approaches and founded the Constitutional Design Lab, which emphasizes normative participatory design, designerly knowledge creation, and creative methods to address complexity.",
         sessions: [
           { day: "DAY 1 - Thursday", title: "Activate AI in Legal Design: The Art of Legal Prompt Engineering" }
         ]
@@ -515,10 +515,10 @@
       {
         section: "Design Thinking in Government and Law-making",
         name: "Eeva Attila",
-        position: "Senior Ministerial Adviser, LL.M., PhD",
+        position: "Senior Ministerial Adviser, LL.M., PhD, Ministry of Justice",
 
         image: "images/speakers/2025/Eeva_Attila.jpg",
-        linkedin: "https://linkedin.com/in/amandafoster",
+        linkedin: "",
         bio: "Eeva is a lawyer and linguist with a particular interest in legal language, especially legislative language. She works as Senior Ministerial Adviser in Legal Revision at the Finnish Ministry of Justice, focusing on law drafting and legislative texts. Previously, she worked in the application of law, including in various courts. For a long time, her free-time hobby was studying the Finnish language at university, until last spring she defended her PhD with a dissertation on Finnish legislative language.",
         sessions: [
           { day: "DAY 1 - Thursday", title: "Law Drafting Meets Legal Design" }
@@ -540,10 +540,10 @@
       {
         section: "Design Thinking in Government and Law-making",
         name: "Jenni Hakkarainen",
-        position: "",
+        position: "Postdoctoral Researcher, Institute of Criminology and Legal Policy, University of Helsinki",
 
         image: "#",
-        linkedin: "#",
+        linkedin: "https://www.linkedin.com/in/jenni-hakkarainen-759107162/",
         bio: "",
         sessions: [
           { day: "DAY 1 - Thursday", title: "TBC" }
@@ -575,11 +575,11 @@
       {
         section: "Design Thinking in Government and Law-making",
         name: "Suparat Fern Sawetamal",
-        position: "",
+        position: "Global Engagement Lead",
 
         image: "images/speakers/2025/Suparat Fern Sawetamal_Photo.jpg",
         linkedin: "https://www.linkedin.com/in/suparat-fern-sawetamal-7b1505a5/",
-        bio: "",
+        bio: "Fern has over four years of experience in the justice sector, specializing in building and managing international partnerships to advance rule of law reform and people-centered justice initiatives domestically and regionally. Her work centers on showcasing local innovations, facilitating knowledge exchange, and designing evidence-based projects. She established strategic partnerships with the World Justice Project and OECD to strengthen Thailand’s justice system through data-driven reforms, and continues to manage these collaborations while expanding global outreach and fostering innovation. Fern holds a B.A. in Business and Psychology from Brandeis University, USA, and an LL.B. from Chulalongkorn University, Thailand.",
         sessions: [
           { day: "DAY 1 - Thursday", title: "Fireside chat: Driving Systemic Change – A Regional Perspective" }
         ]
@@ -697,13 +697,13 @@
 
         section: "The Power and Value of Design in Law",
         name: "Piia Madissoo",
-        position: "Legal Transform & Operate Lead (Finland)",
+        position: "Legal Transform & Operate Lead (EY Finland)",
 
         image: "images/speakers/2025/Piia Madissoo.JPG",
         linkedin: "https://www.linkedin.com/in/piia-madissoo-legal-operations/",
         bio: "Piia leads the development of EY’s Legal Transform & Operate business in Finland. Prior to this role Piia was one of the first full-time in-house legal operations professionals in Finland. Before immersing herself fully into the world of legal operations she worked with several IT projects, both in a legal role, as well as a Steering Manager. By education Piia has a master’s degree both in economics and business administration, as well as in law. Piia is truly passionate about legal operations and everything falling under its umbrella, legal design included.",
         sessions: [
-          { day: "Wednesday - BrainFacotry Day", title: "BrainFactory Workshop: Enabling Digital Transformation Through Legal Design" },
+          { day: "Wednesday - BrainFactory Day", title: "BrainFactory Workshop: Enabling Digital Transformation Through Legal Design" },
           { day: "DAY 1 - Thursday", title: "Fireside chat: The ROI of Legal Design" }
         ]
       },
